--- a/web.config
+++ b/web.config
@@ -59,18 +59,17 @@
 
     <profile defaultProvider="SimpleProfileProvider">
       <providers>
-        <add name='SimpleProfileProvider' type='WebMatrix.WebData.SimpleMembershipProvider, WebMatrix.WebData'
-            connectionStringName='ArtContext' applicationName='/' />
+        <add name="SimpleProfileProvider" type="WebMatrix.WebData.SimpleMembershipProvider, WebMatrix.WebData" connectionStringName="ArtContext" applicationName="/" />
       </providers>
     </profile>
-    <membership defaultProvider='SimpleMembershipProvider'>
+    <membership defaultProvider="SimpleMembershipProvider">
       <providers>
-        <add name='SimpleMembershipProvider' type='WebMatrix.WebData.SimpleMembershipProvider, WebMatrix.WebData' />
+        <add name="SimpleMembershipProvider" type="WebMatrix.WebData.SimpleMembershipProvider, WebMatrix.WebData" />
       </providers>
     </membership>
-    <roleManager defaultProvider='SimpleRoleProvider'>
+    <roleManager defaultProvider="SimpleRoleProvider">
       <providers>
-        <add name='SimpleRoleProvider' type='WebMatrix.WebData.SimpleRoleProvider, WebMatrix.WebData'/>
+        <add name="SimpleRoleProvider" type="WebMatrix.WebData.SimpleRoleProvider, WebMatrix.WebData" />
       </providers>
     </roleManager>
     <!--</sessionState>-->
