--- a/packages.config
+++ b/packages.config
@@ -34,6 +34,9 @@
   <package id="Ninject.MVC3" version="3.0.0.6" targetFramework="net45" />
   <package id="Ninject.Web.Common" version="3.0.0.7" targetFramework="net45" />
   <package id="System.Web.Providers" version="1.2" targetFramework="net45" />
+  <package id="Twitter.Bootstrap" version="2.3.1" targetFramework="net45" />
+  <package id="Twitter.Bootstrap.MVC" version="1.1.6" targetFramework="net45" />
   <package id="WebActivator" version="1.5.3" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.1" targetFramework="net45" />
   <package id="WebGrease" version="1.1.0" targetFramework="net45" />
 </packages>
